# mcp-server-proj

./: LICENSE  README.md  README_CN.md  pyproject.toml
.trae/rules/: project_rules.md
src/mcp_server_proj/: __init__.py  __main__.py  server.py
src/mcp_server_proj/core/: transformation.py
tests/: test_transformation.py
