[project]
name = "mcp-server-proj"
version = "0.1.0"
description = "MCP Server PROJ (cartographic projections and coordinate transformations )"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "mcp>=1.3.0",]
[[project.authors]]
name = "radial-hks"
email = "radialjiajie@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-proj = "mcp_server_proj:main"
