[project]
name = "mcp-server-proj"
version = "0.1.0"
description = "MCP Server PROJ - 坐标系统转换服务器"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["coordinate", "transformation", "projection", "GIS", "MCP"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "mcp>=1.3.0",
    "pyproj>=3.0.0",
]

[[project.authors]]
name = "radial-hks"
email = "radialjiajie@gmail.com"

[project.urls]
Homepage = "https://github.com/radial-hks/mcp-server-proj"
Documentation = "https://github.com/radial-hks/mcp-server-proj/blob/main/README.md"
Repository = "https://github.com/radial-hks/mcp-server-proj.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-proj = "mcp_server_proj.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_proj"]
