[project]
name = "mcp-server-proj"
version = "1.0.0"
description = "MCP Server PROJ - 坐标系统转换服务器"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["coordinate", "transformation", "projection", "GIS", "MCP"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "mcp>=1.3.0",
    "pyproj>=3.0.0",
    "geojson>=3.0.0", # Added geojson
]

[[project.authors]]
name = "radial-hks"
email = "radialjiajie@gmail.com"

[project.urls]
Homepage = "https://github.com/radial-hks/mcp-server-proj"
Documentation = "https://github.com/radial-hks/mcp-server-proj/blob/main/README.md"
Repository = "https://github.com/radial-hks/mcp-server-proj.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-proj = "mcp_server_proj.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "pytest-asyncio>=0.18.0", # Added pytest-asyncio
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_proj"]
